fix #21: hide pub thumbnails on small width devices

--- a/style/devlan-style.css
+++ b/style/devlan-style.css
@@ -394,6 +394,12 @@ body {
   margin: 28px 0px;
 }
 
+@media (max-width: 600px) {
+  .pubThumbnail {
+    display: none;
+  }
+}
+
 .pubThumbnail {
   width: 200px;
   height: 100px;
